syntax = "proto3";

package livekit;
option go_package = "github.com/livekit/livekit-server/proto/livekit";

import "livekit_models.proto";

// Recording service that can be performed on any node
// they are Twirp-based HTTP req/responses
service RecordingService {

    // Starts a room
    rpc StartRecording(StartRecordingRequest) returns (RecordingResponse);

    // Ends a recording
    rpc EndRecording(EndRecordingRequest) returns (RecordingResponse);
}

message StartRecordingRequest {
  RecordingInput input = 1;
  RecordingOutput output = 2;
}

message EndRecordingRequest {
  string recording_id = 1;
}

message RecordingResponse {
  string recording_id = 1;
}
